--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -102,6 +102,9 @@ pydantic==1.8.2 # LEVEL_02 # LOCKED # thinc 8.0.13; spacy 3.2.1 require pydantic
 #
 rfc3986==1.5.0 # LEVEL_01 # LOCKED # sphinx_autodoc_typehints-1.15.2 requires <2,>=1.3 # Validating URI References per RFC 3986
 #
+pyanalyze==0.5.0 # LEVEL_04 # LOCKED # A static analyzer for Python
+pytype==2022.1.7 # LEVEL_04 # LOCKED # Python type inferencer
+#
 #
 # Former LOCKED .. now freed ;-)
 #
@@ -602,10 +605,8 @@ cssselect2==0.4.1 # LEVEL_03 # cssselect2
 #
 # Checkers
 #
-pytest-asyncio==0.16.0 # LEVEL_04 # Pytest support for asyncio
+pytest-asyncio==0.17.0 # LEVEL_04 # Pytest support for asyncio
 pytest==6.2.5 # LEVEL_03 # pytest: simple powerful testing with Python
-pyanalyze==0.5.0 # LEVEL_04 # A static analyzer for Python
-pytype==2022.1.7 # LEVEL_04 # Python type inferencer
 flake8==4.0.1 # LEVEL_02 # better linter than pyflakes # the modular source code checker: pep8 pyflakes and co
 mypy==0.931 # LEVEL_02 # Optional static typing for Python
 mypy-extensions==0.4.3 # LEVEL_01 # Experimental type system extensions for programs checked with the mypy typechecker
