--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -107,6 +107,8 @@ pytype==2022.1.7 # LEVEL_04 # LOCKED # Python type inferencer
 #
 gym==0.20.0 # LEVEL_02 # LOCKED # gym-unity 0.28.0 requires it # Gym: A universal API for reinforcement learning environments
 #
+h11==0.12.0 # LEVEL_01 # LOCKED # httpcore 0.14.5 depends on h11<0.13 and >=0.11 # A pure-Python, bring-your-own-I/O implementation of HTTP/1.1
+#
 #
 # Former LOCKED .. now freed ;-)
 #
@@ -181,7 +183,7 @@ tensorboard-data-server==0.6.1 # LEVEL_01 # Fast data loading for TensorBoard
 tensorboard-plugin-wit==1.8.1 # LEVEL_01 # What-If Tool TensorBoard plugin
 #
 tensorflow-datasets==4.4.0 # LEVEL_04 # tensorflow/datasets is a library of datasets ready to use with TensorFlow
-tensorflow-metadata==1.5.0 # LEVEL_03 # Library and standards for schema and statistics
+tensorflow-metadata==1.6.0 # LEVEL_03 # Library and standards for schema and statistics
 tensorflow-model-optimization==0.7.0 # LEVEL_03 # A suite of tools that users, both novice and advanced can use to optimize machine learning models for deployment and execution
 tensorflow-addons==0.15.0 # LEVEL_02 # TensorFlow Addons
 tensorflow-hub==0.12.0 # LEVEL_02 # TensorFlow Hub is a library to foster the publication, discovery, and consumption of reusable parts of machine learning models
@@ -329,7 +331,7 @@ scikit-plot==0.3.7 # LEVEL_04 # An intuitive library to add plotting functionali
 scikit-image==0.19.1 # LEVEL_03 # Image processing in Python
 scikit-learn==1.0.2 # LEVEL_03 # A set of python modules for machine learning and data mining
 pyod==0.9.7 # LEVEL_05 # outlyer detection # A Python Toolbox for Scalable Outlier Detection (Anomaly Detection)
-jax==0.2.26 # LEVEL_03 # Differentiate, compile, and transform Numpy code
+jax==0.2.27 # LEVEL_03 # Differentiate, compile, and transform Numpy code
 #
 zeep==4.1.0 # LEVEL_04 # A modern/fast Python SOAP client based on lxml / requests
 cached-property==1.5.2 # LEVEL_01 # A decorator for caching properties in classes
@@ -396,7 +398,6 @@ pycryptodome==3.12.0 # LEVEL_01 # Cryptographic library for Python
 #
 #
 Authlib==0.15.5 # LEVEL_04 # The ultimate Python library in building OAuth and OpenID Connect servers
-h11==0.12.0 # LEVEL_01 # A pure-Python, bring-your-own-I/O implementation of HTTP/1.1
 python-dotenv==0.19.2 # LEVEL_01 # Read key-value pairs from a .env file and set them as environment variables
 selenium==4.1.0 # LEVEL_05 #
 #
@@ -469,11 +470,11 @@ hsluv==5.0.2 # LEVEL_01 # Human-friendly HSL
 # Google ..
 #
 google-cloud-bigquery==2.32.0 # LEVEL_06 # Google BigQuery API client library
-google-cloud-core==2.2.1 # LEVEL_05 # Google Cloud API client core library
+google-cloud-core==2.2.2 # LEVEL_05 # Google Cloud API client core library
 google-resumable-media==2.1.0 # LEVEL_02 # Utilities for Google Media Downloads and Resumable Uploads
 google-crc32c==1.3.0 # LEVEL_01 # A python wrapper of the C library 'Google CRC32C'
 #
-google-api-python-client==2.35.0 # LEVEL_05 # Google API Client Library for Python
+google-api-python-client==2.36.0 # LEVEL_05 # Google API Client Library for Python
 google-api-core==2.4.0 # LEVEL_04 # Google API client core library
 google-auth-httplib2==0.1.0 # LEVEL_04 # Google Authentication Library: httplib2 transport
 google-auth-oauthlib==0.4.6 # LEVEL_04 # Google Authentication Library
@@ -491,9 +492,9 @@ smart-open==5.2.1 # LEVEL_01 # Utils for streaming large files (S3, HDFS, GCS, A
 uamqp==1.5.1 # LEVEL_02 # AMQP 1.0 Client Library for Python
 
 # Amazon
-boto3==1.20.37  # LEVEL_05 # The AWS SDK for Python # required by bertviz # The AWS SDK for Python
+boto3==1.20.39  # LEVEL_05 # The AWS SDK for Python # required by bertviz # The AWS SDK for Python
 s3transfer==0.5.0 # LEVEL_04 # An Amazon S3 Transfer Manager
-botocore==1.23.37 # LEVEL_03 # required by boto3 # Low-level, data-driven core of boto 3
+botocore==1.23.39 # LEVEL_03 # required by boto3 # Low-level, data-driven core of boto 3
 boto==2.49.0 # LEVEL_01 # Amazon Web Services Library
 
 #
@@ -576,7 +577,7 @@ pydata-sphinx-theme==0.8.0 # LEVEL_04 # Bootstrap-based Sphinx theme from the Py
 sphinx-autobuild==2021.3.14 # LEVEL_04 # Rebuild Sphinx documentation on changes, with live-reload in the browser
 sphinx-rtd-theme==1.0.0 # LEVEL_04 # Read the Docs theme for Sphinx
 sphinx-panels==0.6.0 # LEVEL_04 # A sphinx extension for creating panels in a grid layout
-sphinx-autodoc-typehints==1.15.2 # LEVEL_04 # Type hints (PEP 484) support for the Sphinx autodoc extension
+sphinx-autodoc-typehints==1.15.3 # LEVEL_04 # Type hints (PEP 484) support for the Sphinx autodoc extension
 Sphinx==4.4.0 # LEVEL_03 # Python documentation generator
 sphinx-markdown-tables==0.0.15 # LEVEL_04 # A Sphinx extension for rendering tables written in markdown
 sphinxcontrib-applehelp==1.0.2 # LEVEL_01 # sphinxcontrib-applehelp is a sphinx extension which outputs Apple help books
@@ -700,7 +701,7 @@ aiodns==3.0.0 # LEVEL_04 # Simple DNS resolver for asyncio
 aiohttp-socks==0.7.1 # LEVEL_04 # Proxy connector for aiohttp
 pycocotools==2.0.4 # LEVEL_04 # Official APIs for the MS-COCO dataset
 #
-aenum==3.1.5 # LEVEL_01 # Advanced Enumerations (compatible with Python's stdlib Enum), NamedTuples, and NamedConstants
+aenum==3.1.6 # LEVEL_01 # Advanced Enumerations (compatible with Python's stdlib Enum), NamedTuples, and NamedConstants
 aiohttp==3.8.1 # LEVEL_03 # Async http client/server framework (asyncio)
 async-timeout==4.0.2 # LEVEL_01 # Timeout context manager for asyncio programs
 aioredis==2.0.1 # 1.3.1 # LEVEL_02 # asyncio (PEP 3156) Redis support
@@ -748,7 +749,7 @@ gin-config==0.5.0 # LEVEL_01 # Gin-Config: A lightweight configuration library f
 HeapDict==1.0.1 # LEVEL_01 # a heap with decrease-key and increase-key operations
 httplib2==0.20.2 # LEVEL_02 # A comprehensive HTTP client library
 idna==3.3 # LEVEL_01 # Internationalized Domain Names in Applications (IDNA)
-ipython==8.0.0 # LEVEL_04 # IPython: Productive Interactive Computing
+ipython==8.0.1 # LEVEL_04 # IPython: Productive Interactive Computing
 ipython-genutils==0.2.0 # LEVEL_01 # Vestigial utilities from IPython
 itsdangerous==2.0.1 # LEVEL_01 # Safely pass data to untrusted environments and back
 jedi==0.18.1 # LEVEL_02 # An autocompletion tool for Python that can be used for text editors
@@ -802,7 +803,7 @@ PyWavelets==1.2.0 # LEVEL_02 # PyWavelets, wavelet transform module
 PyYAML==6.0 # LEVEL_01 # YAML parser and emitter for Python
 pyzmq==22.3.0 # LEVEL_01 # Python bindings for 0MQ
 qcore==1.7.0 # LEVEL_02 # Quora's core utility library
-regex==2021.11.10 # LEVEL_01 # Alternative regular expression module, to replace re
+regex==2022.1.18 # LEVEL_01 # Alternative regular expression module, to replace re
 retrying==1.3.3 # LEVEL_02 # Retrying
 rsa==4.8 # LEVEL_02 # Pure-Python RSA implementation
 sacrebleu==2.0.0 # LEVEL_02 # Hassle-free computation of shareable, comparable, and reproducible BLEU, chrF, and TER scores
@@ -1036,7 +1037,7 @@ emoji==1.6.3 # LEVEL_01 # Emoji for Python
 shellingham==1.4.0 # LEVEL_01 # Tool to Detect Surrounding Shell
 #
 fonttools==4.28.5 # LEVEL_01 # Tools to manipulate font files
-setuptools-scm==6.4.1 # LEVEL_03 # the blessed package to manage your versions by scm tags
+setuptools-scm==6.4.2 # LEVEL_03 # the blessed package to manage your versions by scm tags
 tomli==2.0.0 # LEVEL_01 # A lil' TOML parser
 #
 databricks-cli==0.16.2 # LEVEL_03 # A command line interface for Databricks
